k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app.kubernetes.io/name: httpbin
spec:
  selector:
    app.kubernetes.io/name: httpbin
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
